# cookie

./: .gitmodules  Cargo.toml  README.md  cert.pem  go.mod  go.sum  key.pem  make.sh  package.json
.cargo/: config.toml
client/: .bundleignore  .gitignore  package.json
client/bundle/: Main.html  Main.js  Main.js.map
client/bundle/satori/: Anim.less  DetailScreen.less  IconList.less
client/bundle/satori/io/: CheckIO.less  ImagesOO.less  TextSearchIO.less  TimeWindows.less
client/bundle/satori/types/: storefront-2024-01.schema.json
client/src/: CreationActions.ts  CreationE2EScreen.ts  CreationFooter.ts  CreationHeader.ts  CreationsScreen.ts  DAO.ts  ErrorHandler.ts  Main.html.d.ts  Main.ts  RecipeActions.ts  RecipeE2EScreen.ts  RecipeFooter.ts  RecipeHeader.ts  Schema.ts  ScreenHead.ts
common/rust/src/: lib.rs
deploy/: .dockerignore  Dockerfile  cloud.sh  main.go  util.go
server/: Cargo.toml  make.sh
server/conf/tls/: ca_key.pem  server_crt.pem  server_key.pem
server/server/conf/tls/: server_crt.pem  server_key.pem
server/src/: service.rs
tiers/client/: .eslintrc.json  .npmrc  package.json  tsconfig.json
tiers/client/bundle/: Main.js  Main.js.map
tiers/client/bundle/satori/: AdHocInputDialog.less  Brief.less  Dialog.less  Gradients.less  (+2 more)
tiers/client/src/: CreationBrief.ts  CreationE2EScreen.ts  CreationFoot.ts  CreationHead.ts  CreationsScreen.ts  DAO.ts  Loader.ts  ScreenHead.ts
tiers/common/: bebop.json  build.sh
tiers/common/rust/: Cargo.toml
tiers/server/: Cargo.toml  rustfmt.toml
tiers/server/src/: main.rs  service.rs
(+94 files in other folders)
