[package]
name = "cookie"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = false

[profile.dev]
debug = true

[dependencies]
bincode = "1.3.3"
env_logger = "0.11.6"
log = "0.4.25"
ndarray = "0.16.1"
pprof = { version = "0.14", features = ["flamegraph"] }
serde = { version = "1.0.218", features = ["derive"] }
socket2 = "0.5.8"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = [ "net" ] }
axum = "0.8.7"
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
# Ensure rustls uses a single provider (aws-lc) to match other workspace deps
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
rustls-pemfile = "1.0"
hyper = { version = "1.5", features = ["http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
webpki-roots = "0.22"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tokio-util = "0.7.17"
base64 = "0.22"
rcgen = "0.12"
prometheus = "0.13"
time = "0.3.44"
chrono = "0.4.42"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.18"
